--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -193,7 +193,7 @@
   "pli-tv-kd4:3.5.69": "or admits that he’s a hermaphrodite after reaching the Sangha, then the invitation has been brought. ",
   "pli-tv-kd4:3.5.70": "And if, after the invitation has been passed on to him, the monk who is conveying the invitation reaches the Sangha, but doesn’t announce the invitation because he falls asleep, then the invitation has been brought. ",
   "pli-tv-kd4:3.5.71": "And there’s no offense for the one who is conveying the invitation. ",
-  "pli-tv-kd4:3.5.72": "And even if, after the invitation has been passed on to him, the monk who is conveying the invitation reaches the Sangha, but doesn’t announce the invitation because he is heedless ",
+  "pli-tv-kd4:3.5.72": "And if, after the invitation has been passed on to him, the monk who is conveying the invitation reaches the Sangha, but doesn’t announce the invitation because he is heedless ",
   "pli-tv-kd4:3.5.73": "or because he gains a meditation attainment, then the invitation has been brought. ",
   "pli-tv-kd4:3.5.74": "And there’s no offense for the one who is conveying the invitation. ",
   "pli-tv-kd4:3.5.75": "“And even if, after the invitation has been passed on to him, the monk who is conveying the invitation reaches the Sangha, but deliberately doesn’t announce the invitation, then the invitation has been brought. ",
