--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -664,7 +664,7 @@
   "pli-tv-kd2:23.1.1": "Then the Buddha addressed the monks: ",
   "pli-tv-kd2:23.1.2": "“Gather, monks, for the Sangha to do a legal procedure.” ",
   "pli-tv-kd2:23.1.3": "A monk said to the Buddha, ",
-  "pli-tv-kd2:23.1.4": "“Sir, there’s a sick monk. He hasn’t come.” ",
+  "pli-tv-kd2:23.1.4": "“Venerable Sir, there’s a sick monk. He hasn’t come.” ",
   "pli-tv-kd2:23.1.5": "“A sick monk should give his consent. ",
   "pli-tv-kd2:23.1.6": "And this is how he should give it. ",
   "pli-tv-kd2:23.1.7": "The sick monk should approach a monk, put his upper robe over one shoulder, and squat on his heels. He should then raise his joined palms and say, ",
