--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -155,5 +155,6 @@
   "mn35:21.6": "Dato che le cose stanno così, tu non sei uno che si aggrappa, trattiene e si attacca alla sofferenza, considerandola così: ‘Questo è mio, io sono questo, questo è il mio sé.’?”",
   "mn35:21.8": "“Come potrei non esserlo?",
   "mn35:21.9": "Sì, Maestro Gotama.”",
-  "mn35:22.1": "“Immagina, Aggivessana, una persona che ha bisogno di durame. Vagando alla ricerca di durame, prende una ascia affilata e si addentra nella foresta."
+  "mn35:22.1": "“Immagina, Aggivessana, una persona che ha bisogno di durame. Vagando alla ricerca di durame, prende una ascia affilata e si addentra nella foresta.",
+  "mn35:22.2": "Lì vede un grande banano, dritto e giovane e cresciuto senza difetti."
 }
