--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -157,5 +157,6 @@
   "mn35:21.9": "Sì, Maestro Gotama.”",
   "mn35:22.1": "“Immagina, Aggivessana, una persona che ha bisogno di durame. Vagando alla ricerca di durame, prende una ascia affilata e si addentra nella foresta.",
   "mn35:22.2": "Lì vede un grande banano, dritto e giovane e cresciuto senza difetti.",
-  "mn35:22.3": "Lo taglia alla base, taglia la cima, e srotola gli strati arrotolati."
+  "mn35:22.3": "Lo taglia alla base, taglia la cima, e srotola gli strati arrotolati.",
+  "mn35:22.4": "Ma non trova nemmeno del legno tenero, tanto meno del durame."
 }
