--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -159,5 +159,6 @@
   "mn35:22.2": "Lì vede un grande banano, dritto e giovane e cresciuto senza difetti.",
   "mn35:22.3": "Lo taglia alla base, taglia la cima, e srotola gli strati arrotolati.",
   "mn35:22.4": "Ma non trova nemmeno del legno tenero, tanto meno del durame.",
-  "mn35:22.5": "Allo stesso modo, se perseguito, pressato, e spinto da me riguardo la tua dottrina, ne esce fuori che sei vuoto, vacuo, e in errore."
+  "mn35:22.5": "Allo stesso modo, se perseguito, pressato, e spinto da me riguardo la tua dottrina, ne esce fuori che sei vuoto, vacuo, e in errore.",
+  "mn35:22.6": "Ma sei stato tu a dire davanti all’assemblea di Vesālī:"
 }
