--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -160,5 +160,6 @@
   "mn35:22.3": "Lo taglia alla base, taglia la cima, e srotola gli strati arrotolati.",
   "mn35:22.4": "Ma non trova nemmeno del legno tenero, tanto meno del durame.",
   "mn35:22.5": "Allo stesso modo, se perseguito, pressato, e spinto da me riguardo la tua dottrina, ne esce fuori che sei vuoto, vacuo, e in errore.",
-  "mn35:22.6": "Ma sei stato tu a dire davanti all’assemblea di Vesālī:"
+  "mn35:22.6": "Ma sei stato tu a dire davanti all’assemblea di Vesālī:",
+  "mn35:22.7": "“Non vedo nessun asceta o bramino—guida di un ordine o di una comunità, o il maestro di una comunità, persino uno che dice di essere un perfetto, un Buddha completamente risvegliato—che non vacillerebbe e oscillerebbe e tremerebbe, sudando dalle ascelle, se lo affrontassi in dibattito."
 }
