--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -164,5 +164,6 @@
   "mn35:22.7": "“Non vedo nessun asceta o bramino—guida di un ordine o di una comunità, o il maestro di una comunità, persino uno che dice di essere un perfetto, un Buddha completamente risvegliato—che non vacillerebbe e oscillerebbe e tremerebbe, sudando dalle ascelle, se lo affrontassi in dibattito.",
   "mn35:22.8": "Persino se affrontassi un palo insenziente in dibattito, vacillerebbe e oscillerebbe e tremerebbe.",
   "mn35:22.9": "Figuriamoci un umano!”",
-  "mn35:22.10": "Ma il sudore sta cadendo dalla tua fronte; ha inzuppato la tua tunica e gocciola in terra."
+  "mn35:22.10": "Ma il sudore sta cadendo dalla tua fronte; ha inzuppato la tua tunica e gocciola in terra.",
+  "mn35:22.11": "Mentre io ora non ho sudore sul corpo.”"
 }
