--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -165,5 +165,6 @@
   "mn35:22.8": "Persino se affrontassi un palo insenziente in dibattito, vacillerebbe e oscillerebbe e tremerebbe.",
   "mn35:22.9": "Figuriamoci un umano!”",
   "mn35:22.10": "Ma il sudore sta cadendo dalla tua fronte; ha inzuppato la tua tunica e gocciola in terra.",
-  "mn35:22.11": "Mentre io ora non ho sudore sul corpo.”"
+  "mn35:22.11": "Mentre io ora non ho sudore sul corpo.”",
+  "mn35:22.12": "Allora il Buddha mostrò il proprio corpo dorato all'assemblea."
 }
