--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -167,5 +167,6 @@
   "mn35:22.10": "Ma il sudore sta cadendo dalla tua fronte; ha inzuppato la tua tunica e gocciola in terra.",
   "mn35:22.11": "Mentre io ora non ho sudore sul corpo.”",
   "mn35:22.12": "Allora il Buddha mostrò il proprio corpo dorato all'assemblea.",
-  "mn35:22.13": "Detto ciò, Saccaka rimase seduto in silenzio, imbarazzato, con spalle cadenti, abbattuto, depresso, senza dire nulla."
+  "mn35:22.13": "Detto ciò, Saccaka rimase seduto in silenzio, imbarazzato, con spalle cadenti, abbattuto, depresso, senza dire nulla.",
+  "mn35:23.1": "Vedendo ciò il Licchavi Dummukha disse al Buddha:"
 }
