--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -169,5 +169,6 @@
   "mn35:22.12": "Allora il Buddha mostrò il proprio corpo dorato all'assemblea.",
   "mn35:22.13": "Detto ciò, Saccaka rimase seduto in silenzio, imbarazzato, con spalle cadenti, abbattuto, depresso, senza dire nulla.",
   "mn35:23.1": "Vedendo ciò il Licchavi Dummukha disse al Buddha:",
-  "mn35:23.2": "“Mi viene una similitudine, Beato.”"
+  "mn35:23.2": "“Mi viene una similitudine, Beato.”",
+  "mn35:23.3": "“Allora parla come ti senti ispirato,” disse il Buddha."
 }
