--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -172,5 +172,6 @@
   "mn35:23.2": "“Mi viene una similitudine, Beato.”",
   "mn35:23.3": "“Allora parla come ti senti ispirato,” disse il Buddha.",
   "mn35:23.4": "“Signore, immagini uno stagno di fiori di loto non lontano da una città o un villaggio,",
-  "mn35:23.5": "ed un granchio che vive lì."
+  "mn35:23.5": "ed un granchio che vive lì.",
+  "mn35:23.6": "Poi vari ragazzi o ragazze lasciano la città o il villaggio e vanno allo stagno, dove prendono il granchio e lo posano sulla terra asciutta."
 }
