--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -173,5 +173,6 @@
   "mn35:23.3": "“Allora parla come ti senti ispirato,” disse il Buddha.",
   "mn35:23.4": "“Signore, immagini uno stagno di fiori di loto non lontano da una città o un villaggio,",
   "mn35:23.5": "ed un granchio che vive lì.",
-  "mn35:23.6": "Poi vari ragazzi o ragazze lasciano la città o il villaggio e vanno allo stagno, dove prendono il granchio e lo posano sulla terra asciutta."
+  "mn35:23.6": "Poi vari ragazzi o ragazze lasciano la città o il villaggio e vanno allo stagno, dove prendono il granchio e lo posano sulla terra asciutta.",
+  "mn35:23.7": "Ogni volta che il granchio estende una chela, quei ragazzi o ragazze la spezzano, crepano, e rompono con un bastoncino o una pietra."
 }
