--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -175,5 +175,6 @@
   "mn35:23.5": "ed un granchio che vive lì.",
   "mn35:23.6": "Poi vari ragazzi o ragazze lasciano la città o il villaggio e vanno allo stagno, dove prendono il granchio e lo posano sulla terra asciutta.",
   "mn35:23.7": "Ogni volta che il granchio estende una chela, quei ragazzi o ragazze la spezzano, crepano, e rompono con un bastoncino o una pietra.",
-  "mn35:23.8": "E una volta che tutte le chele di quel granchio sono state spezzate, rotte, e staccate il granchio non è in grado di ritornare nello stagno."
+  "mn35:23.8": "E una volta che tutte le chele di quel granchio sono state spezzate, rotte, e staccate il granchio non è in grado di ritornare nello stagno.",
+  "mn35:23.9": "Allo stesso modo, Signore, il Buddha ha spezzato, rotto, e staccato ogni trucco, espediente e scappatoia di Saccaka."
 }
