--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -177,5 +177,6 @@
   "mn35:23.7": "Ogni volta che il granchio estende una chela, quei ragazzi o ragazze la spezzano, rotte, e staccate con un bastoncino o una pietra.",
   "mn35:23.8": "E una volta che tutte le chele di quel granchio sono state spezzate, rotte, e staccate il granchio non è in grado di ritornare nello stagno.",
   "mn35:23.9": "Allo stesso modo, Signore, il Buddha ha spezzato, rotto, e staccato ogni trucco, espediente e scappatoia di Saccaka.",
-  "mn35:23.10": "Ora Saccaka non può più avvicinarsi al Buddha cercando dibattito.”"
+  "mn35:23.10": "Ora Saccaka non può più avvicinarsi al Buddha cercando dibattito.”",
+  "mn35:24.1": "Ma Saccaka gli disse:"
 }
