--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -180,5 +180,6 @@
   "mn35:23.10": "Ora Saccaka non può più avvicinarsi al Buddha cercando dibattito.”",
   "mn35:24.1": "Ma Saccaka gli disse:",
   "mn35:24.2": "“Aspetta Dummukha, aspetta! Non stavo parlando con te, stavo parlando col Maestro Gotama.",
-  "mn35:24.3": "Maestro Gotama, lascia stare quella dichiarazione che ho fatto—che hanno fatto anche altri asceti e bramini—"
+  "mn35:24.3": "Maestro Gotama, lascia stare quella dichiarazione che ho fatto—che hanno fatto anche altri asceti e bramini—",
+  "mn35:24.4": "Era solo una sciocchezza."
 }
