--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -187,5 +187,6 @@
   "mn35:24.7": "Vede per com’è davvero ogni tipo di sensazione …",
   "mn35:24.8": "percezione …",
   "mn35:24.9": "intenzione …",
-  "mn35:24.10": "coscienza in assoluto—passata, futura, o presente; interna o esterna; grossolana o raffinata; inferiore o superiore; lontana o vicina: *ogni* forma—con comprensione corretta: ‘Questo non è mio, io non sono questo, questo non è il mio sé.’"
+  "mn35:24.10": "coscienza in assoluto—passata, futura, o presente; interna o esterna; grossolana o raffinata; inferiore o superiore; lontana o vicina: *ogni* forma—con comprensione corretta: ‘Questo non è mio, io non sono questo, questo non è il mio sé.’",
+  "mn35:24.11": "Così si definisce un mio discepolo che segue le istruzioni e risponde ai consigli; che è andato oltre al dubbio, si è liberato dell'indecisione, ha ottenuto garanzia, ed è indipendente dagli altri nelle istruzioni del Maestro.”"
 }
