--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -188,5 +188,6 @@
   "mn35:24.8": "percezione …",
   "mn35:24.9": "intenzione …",
   "mn35:24.10": "coscienza in assoluto—passata, futura, o presente; interna o esterna; grossolana o raffinata; inferiore o superiore; lontana o vicina: *ogni* forma—con comprensione corretta: ‘Questo non è mio, io non sono questo, questo non è il mio sé.’",
-  "mn35:24.11": "Così si definisce un mio discepolo che segue le istruzioni e risponde ai consigli; che è andato oltre al dubbio, si è liberato dell'indecisione, ha ottenuto garanzia, ed è indipendente dagli altri nelle istruzioni del Maestro.”"
+  "mn35:24.11": "Così si definisce un mio discepolo che segue le istruzioni e risponde ai consigli; che è andato oltre al dubbio, si è liberato dell'indecisione, ha ottenuto garanzia, ed è indipendente dagli altri nelle istruzioni del Maestro.”",
+  "mn35:25.1": "“Ma come definisce un mendicante perfetto, con contaminanti eliminati, che ha completato il percorso spirituale, fatto ciò che c'era da fare, riposto il fardello, raggiunto il proprio vero obiettivo, assolutamente eliminato le catene dell'esistenza, ed è giustamente libero attraverso la realizzazione?”"
 }
