--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -192,5 +192,6 @@
   "mn35:25.1": "“Ma come definisce un mendicante perfetto, con contaminanti eliminati, che ha completato il percorso spirituale, fatto ciò che c'era da fare, riposto il fardello, raggiunto il proprio vero obiettivo, assolutamente eliminato le catene dell'esistenza, ed è giustamente libero attraverso la realizzazione?”",
   "mn35:25.2": "“È quando un mio discepolo vede per com’è davvero ogni tipo di forma in assoluto—passata, futura, o presente; interna o esterna; grossolana o raffinata; inferiore o superiore; lontana o vicina: *ogni* forma—con comprensione corretta: ‘Questo non è mio, io non sono questo, questo non è il mio sé.’ Ed avendo visto con comprensione corretta viene liberato tramite il distacco.",
   "mn35:25.3": "Vede per com’è davvero ogni tipo di sensazione …",
-  "mn35:25.4": "percezione …"
+  "mn35:25.4": "percezione …",
+  "mn35:25.5": "intenzione …"
 }
