--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -197,5 +197,6 @@
   "mn35:25.6": "coscienza in assoluto—passata, futura, o presente; interna o esterna; grossolana o raffinata; inferiore o superiore; lontana o vicina: *ogni* forma—con comprensione corretta: ‘Questo non è mio, io non sono questo, questo non è il mio sé.’ Ed avendo visto con comprensione corretta viene liberato tramite il distacco.",
   "mn35:25.7": "Così si definisce un mendicante perfetto, con contaminanti eliminati, che ha completato il percorso spirituale, fatto ciò che c'era da fare, riposto il fardello, raggiunto il proprio vero obiettivo, assolutamente eliminato le catene dell'esistenza, ed è giustamente libero attraverso la realizzazione.",
   "mn35:26.1": "Un mendicante la cui mente è libera così possiede tre qualità insuperabili:",
-  "mn35:26.2": "visione insuperabile, pratica insuperabile, e libertà insuperabile."
+  "mn35:26.2": "visione insuperabile, pratica insuperabile, e libertà insuperabile.",
+  "mn35:26.3": "Onora, rispetta, stima, e venera solo il Realizzato:"
 }
