--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -202,5 +202,6 @@
   "mn35:26.4": "‘Il Beato è risvegliato, domato, sereno, andato oltre, ed estinto. E spiega l'insegnamento per il risveglio, autocontrollo, serenità, per andare oltre, e per l'estinzione.’”",
   "mn35:27.1": "Detto ciò, Saccaka disse al Buddha:",
   "mn35:27.2": "“Maestro Gotama, è stato rude ed impudente da parte mia immaginare di attaccarla in dibattito.",
-  "mn35:27.3": "Poiché una persona potrebbe trovare sicurezza dopo aver attaccato un elefante in calore, ma non dopo aver attaccato il Maestro Gotama."
+  "mn35:27.3": "Poiché una persona potrebbe trovare sicurezza dopo aver attaccato un elefante in calore, ma non dopo aver attaccato il Maestro Gotama.",
+  "mn35:27.4": "Una persona potrebbe trovare sicurezza dopo aver attaccato una massa di fuoco fiammante, ma non dopo aver attaccato il Maestro Gotama."
 }
