--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -205,5 +205,6 @@
   "mn35:27.3": "Poiché una persona potrebbe trovare sicurezza dopo aver attaccato un elefante in calore, ma non dopo aver attaccato il Maestro Gotama.",
   "mn35:27.4": "Una persona potrebbe trovare sicurezza dopo aver attaccato una massa di fuoco fiammante, ma non dopo aver attaccato il Maestro Gotama.",
   "mn35:27.5": "Potrebbe trovare sicurezza dopo aver attaccato una vipera velenosa, ma non dopo aver attaccato il Maestro Gotama.",
-  "mn35:27.6": "È stato rude ed impudente da parte mia immaginare di attaccarla in dibattito."
+  "mn35:27.6": "È stato rude ed impudente da parte mia immaginare di attaccarla in dibattito.",
+  "mn35:27.7": "Il Maestro Gotama accetterebbe il pasto di domani insieme alla comunità di mendicanti da parte mia?”"
 }
