--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -209,5 +209,6 @@
   "mn35:27.7": "Il Maestro Gotama accetterebbe il pasto di domani insieme alla comunità di mendicanti da parte mia?”",
   "mn35:27.8": "Il Buddha acconsentì in silenzio.",
   "mn35:28.1": "Quindi, sapendo che il Buddha aveva accettato, Saccaka si rivolse ai Licchavi:",
-  "mn35:28.2": "“Ascoltate, signori. Ho invitato l’asceta Gotama insieme alla comunità di mendicanti per il pasto di domani."
+  "mn35:28.2": "“Ascoltate, signori. Ho invitato l’asceta Gotama insieme alla comunità di mendicanti per il pasto di domani.",
+  "mn35:28.3": "Potete portarmi tutto ciò pensiate sia adeguato.”"
 }
