--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -212,5 +212,6 @@
   "mn35:28.2": "“Ascoltate, signori. Ho invitato l’asceta Gotama insieme alla comunità di mendicanti per il pasto di domani.",
   "mn35:28.3": "Potete portarmi tutto ciò pensiate sia adeguato.”",
   "mn35:29.1": "Poi, una volta passata la notte, i Licchavi presentarono a Saccaka un’offerta di cinquecento porzioni di cibo.",
-  "mn35:29.2": "E Saccaka fece preparare vari cibi deliziosi a casa sua. Poi annunciò l'ora al Buddha, dicendo:"
+  "mn35:29.2": "E Saccaka fece preparare vari cibi deliziosi a casa sua. Poi annunciò l'ora al Buddha, dicendo:",
+  "mn35:29.3": "“Maestro Gotama, è ora. Il pranzo è pronto.”"
 }
