--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -214,5 +214,6 @@
   "mn35:29.1": "Poi, una volta passata la notte, i Licchavi presentarono a Saccaka un’offerta di cinquecento porzioni di cibo.",
   "mn35:29.2": "E Saccaka fece preparare vari cibi deliziosi a casa sua. Poi annunciò l'ora al Buddha, dicendo:",
   "mn35:29.3": "“Maestro Gotama, è ora. Il pranzo è pronto.”",
-  "mn35:30.1": "Allora al mattino il Buddha si vestì, prese la propria ciotola e tunica, andò al parco di Saccaka, e si sedette al posto preparato insieme alla comunità di mendicanti."
+  "mn35:30.1": "Allora al mattino il Buddha si vestì, prese la propria ciotola e tunica, andò al parco di Saccaka, e si sedette al posto preparato insieme alla comunità di mendicanti.",
+  "mn35:30.2": "Poi Saccaka servì e soddisfece la comunità di mendicanti guidata dal Buddha con le proprie mani con vari cibi deliziosi."
 }
