--- a/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn35_translation-it-giovannizappa.json
@@ -218,5 +218,6 @@
   "mn35:30.2": "Poi Saccaka servì e soddisfece la comunità di mendicanti guidata dal Buddha con le proprie mani con vari cibi deliziosi.",
   "mn35:30.3": "Una volta che il Buddha ebbe mangiato ed ebbe lavato mani e ciotola, Saccaka si sedette su un posto basso a lato.",
   "mn35:30.4": "Poi disse al Buddha:",
-  "mn35:30.5": "“Maestro Gotama, che il merito e la crescita di merito per questa offerta siano in nome della gioia dei donatori.”"
+  "mn35:30.5": "“Maestro Gotama, che il merito e la crescita di merito per questa offerta siano in nome della gioia dei donatori.”",
+  "mn35:30.6": "“Aggivessana, tutto ciò che viene dal donare ad un ricevente di donazione religiosa come te—che non è libero da avidità, odio, ed illusione—sarà a favore dei donatori."
 }
