--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -719,7 +719,7 @@
   "pli-tv-kd2:24.1.5": "ʻPlease release this monk for a short time so that he can take part in the observance-day procedure.’ ",
   "pli-tv-kd2:24.2.1": "If they’re able to do this, it’s good. ",
   "pli-tv-kd2:24.2.2": "If not, they should say to those relatives, ",
-  "pli-tv-kd2:24.2.3": "ʻPlease step to one side for a moment while this monk passes on his purity.’ ",
+  "pli-tv-kd2:24.2.3": "ʻPlease step aside for a moment while this monk passes on his purity.’ ",
   "pli-tv-kd2:24.2.4": "If they’re able to do this, it’s good. ",
   "pli-tv-kd2:24.2.5": "If not, they should say to those relatives, ",
   "pli-tv-kd2:24.2.6": "ʻPlease take this monk outside the monastery zone for a short time while the Sangha does the observance-day procedure.’ ",
