--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -728,7 +728,7 @@
   "pli-tv-kd2:24.2.9": "If you do, you commit an offense of wrong conduct. ",
   "pli-tv-kd2:24.3.1": "“If a monk is seized by kings on the observance day … ",
   "pli-tv-kd2:24.3.2": "by bandits … ",
-  "pli-tv-kd2:24.3.3": "by scoundrels, ",
+  "pli-tv-kd2:24.3.3": "by scoundrels … ",
   "pli-tv-kd2:24.3.4": "or by enemies of monks, other monks should say to those enemies, ",
   "pli-tv-kd2:24.3.5": "ʻPlease release this monk for a short time, so that he can take part in the observance-day procedure.’ ",
   "pli-tv-kd2:24.3.6": "If they’re able to do this, it’s good. ",
