--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -740,7 +740,7 @@
   "pli-tv-kd2:24.3.12": "If they’re able to do this, it’s good. ",
   "pli-tv-kd2:24.3.13": "If not, you should not do the observance-day procedure with an incomplete Sangha. ",
   "pli-tv-kd2:24.3.14": "If you do, you commit an offense of wrong conduct.” ",
-  "pli-tv-kd2:25.1.0": "23. Approval in regard to insanity ",
+  "pli-tv-kd2:25.1.0": "23. Agreement in regard to insanity ",
   "pli-tv-kd2:25.1.1": "Then the Buddha addressed the monks: ",
   "pli-tv-kd2:25.1.2": "“Gather, monks, there’s business for the Sangha.” ",
   "pli-tv-kd2:25.1.3": "A monk said to the Buddha, ",
